[package]
name = "monotile"
version = "0.1.0"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]
edition = "2018"

[dependencies]
gio = "0.15.11"
cairo-rs = "0.15.11"
image = "0.24.2"
gdk = "0.15.4"
glib = "0.15.11"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"

[dependencies.gtk]
version = "0.15.5"
features = ["v3_22"]
