[package]
name = "monotile"
version = "0.1.0"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]
edition = "2021"

[dependencies]
serde = "1.0.145"
serde_json = "1.0.87"
serde_derive = "1.0.145"
rfd = "0.10.0"
emath = "0.19.0"
image = "0.24.4"

[dependencies.vizia]
git = "https://github.com/vizia/vizia.git"
