[workspace]

[workspace.dependencies]
image = "0.25.1"

[package]
name = "monotile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image.workspace = true

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["debug", "tokio", "winit", "xdg-portal"]

[dependencies.libmonotile]
path = "lib"
features = ["libcosmic"]
